[project]
name = "weatherio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "aiosqlite>=0.22.1",
    "debugpy>=1.8.19",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.40.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
enableTypeIgnoreComments = true
